add support for c++17, 14, 11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
 project(co)
+# set(CMAKE_CXX_STANDARD 17)
 
 include_directories("${CMAKE_SOURCE_DIR}/src/")
 
@@ -13,7 +14,8 @@ file(GLOB test_sources
 )
 
 if (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
-    add_compile_options(-std=c++2a -fcoroutines-ts -stdlib=libc++)
+    add_compile_options(-std=c++17 -stdlib=libc++)
+    # add_compile_options(-std=c++2a -fcoroutines-ts -stdlib=libc++)
     link_libraries(c++ c++abi)
 elseif(TRUE)
 endif()
