--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,10 @@ steps:
     sudo apt-get update
     sudo apt-get install -y ninja-build libc++-dev libc++abi-dev libc++abi1 libstdc++-7-dev gcc-7 g++-7
     # sudo apt-get install clang-6.0 clang++-6.0
+    sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc-7 100
+    sudo update-alternatives --set cc /usr/bin/gcc-7
+    sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++-7 100
+    sudo update-alternatives --set c++ /usr/bin/g++-7
 - checkout: self
   submodules: recursive
 - script: |
@@ -26,7 +30,7 @@ steps:
     cmakeArgs: '-DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_STANDARD=11 ..'
 - script: |
     cd build.debug.gnu.cxx11
-    make
+    make VERBOSE=1
     ./test_all
   displayName: Run tests, debug.gnu.cxx11
 - script: |
@@ -38,7 +42,7 @@ steps:
     cmakeArgs: '-DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_STANDARD=14 ..'
 - script: |
     cd build.debug.gnu.cxx14
-    make
+    make VERBOSE=1
     ./test_all
   displayName: Run tests, debug.gnu.cxx14
 - script: |
@@ -50,6 +54,6 @@ steps:
     cmakeArgs: '-DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_STANDARD=17 ..'
 - script: |
     cd build.debug.gnu.cxx17
-    make
+    make VERBOSE=1
     ./test_all
   displayName: Run tests, debug.gnu.cxx17
